# python-flask-web-app

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: publish.yml
src/: app.py
src/static/css/: coming-soon.css  coming-soon.min.css
src/templates/: about.html  index.html  layout.html
