[tool.poetry]
name = "python-flask-web-app"
version = "0.1.0"
description = ""
authors = ["Karl Vanderslice <karl@karlvanderslice.com>"]

[tool.poetry.dependencies]
python = "=3.8"
click = "=8.1.3"
Flask = "=2.2.2"
Flask-WTF = "=1.0.1"
itsdangerous = "=2.1.2"
Jinja2 = "=3.1.2"
MarkupSafe = "=2.1.1"
Werkzeug = "=2.2.2"
WTForms = "=3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core=1.0.0"]
build-backend = "poetry.core.masonry.api"
